[gd_scene load_steps=3 format=3 uid="uid://cvf60vvx6ogex"]

[ext_resource type="Script" path="res://minigames/music ritmito/main.gd" id="1_00oav"]

[sub_resource type="SegmentShape2D" id="SegmentShape2D_udc76"]
a = Vector2(720, 960)
b = Vector2(0, 960)

[node name="Main" type="Node2D"]
script = ExtResource("1_00oav")

[node name="fondo" type="ColorRect" parent="."]
offset_right = 720.0
offset_bottom = 1280.0
color = Color(0, 0, 0.0705882, 1)

[node name="ColorRect2" type="ColorRect" parent="."]
offset_top = 960.0
offset_right = 720.0
offset_bottom = 968.0
color = Color(0.458824, 0.631373, 1, 1)

[node name="Timer" type="Timer" parent="."]
wait_time = 0.8
autostart = true

[node name="Area2D" type="Area2D" parent="."]

[node name="CollisionShape2D" type="CollisionShape2D" parent="Area2D"]
shape = SubResource("SegmentShape2D_udc76")

[connection signal="timeout" from="Timer" to="." method="_on_timer_timeout"]
[connection signal="body_shape_entered" from="Area2D" to="." method="_on_area_2d_body_shape_entered"]
[connection signal="body_shape_exited" from="Area2D" to="." method="_on_area_2d_body_shape_exited"]
